# flux-scientific

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  ACADEMIC_OUTREACH.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.web  ENHANCEMENT_ROADMAP.md  GITHUB_SETUP.md  LAUNCH_POSTS.md  NEXT_STEPS.md  PUBLISH_INSTRUCTIONS.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  ROADMAP.md  build_and_publish.sh  deploy.sh  deploy_all.sh  docker-compose.yml  flux.py  flux_scientific.py  fly.toml  github_push.sh  my_first_pde.py  push_to_github.bat  push_to_github_now.bat  pypi_publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_benchmark.py  test_heat_solver.py  test_validation.py  web_app.py  web_app_full.py  web_app_professional.py  (+1 more)
.github/workflows/: ci.yml  test.yml
benchmarks/: benchmark_suite.py
docs/: Makefile  conf.py  getting-started.md  index.md  index.rst  installation.rst  language-reference.md  quickstart.rst  requirements.txt
docs/_static/css/: custom.css
docs/language/: syntax.rst
enhancements/: __init__.py  enhancement_manager.py  feature_flags.py
enhancements/modules/: __init__.py
examples/: heat_equation_working.py
notebooks/: 01_getting_started.ipynb  02_advanced_pdes.ipynb
showcase/: cfd_cavity_flow.py  gpu_performance_demo.py  interactive_pde_explorer.py
src/: __init__.py  codegen.py  codegen_python.py  flux_compiler.py  heat_solver.py  interpreter.py  lexer.py  mesh.py  navier_stokes_solver.py  parser.py  pde_lexer.py  pde_parser.py  pde_solver.py  visualization.py
static/css/: style.css
static/js/: app.js
templates/: index.html
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/snippets/: flux.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: flux.tmLanguage.json
